# gallery-watcher

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
src/gallerywatcher/: __init__.py  main.py
